Fix compare spacing

--- a/src/layout/components/compare.sass
+++ b/src/layout/components/compare.sass
@@ -1,7 +1,6 @@
 @import '../config/_colors'
   
 .compare
-  min-height: 80vh
   display: flex
   flex-direction: column
   align-items: center
@@ -14,6 +13,7 @@
   font-weight: 100
   font-size: 48px
   text-align: center
+  margin-top: 48px
   margin-bottom: 16px
 
 .compare__input
